--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,31 @@
   border: 1px solid black;
 }
 
+.container60 {
+  width: 60%;
+  margin: 0 1% 0 0;
+  padding: 1%;
+  border: 1px solid black;
+  float: left;
+}
+
+.thinfont {
+  font-weight: lighter;
+}
+
+.container33 {
+  width: 33%;
+  margin: 0 1% 0 0;
+  padding: 1%;
+  border: 1px solid black;
+  float: left;
+}
+
+.clearfix {
+  clear: both;
+  float: none;
+}
+
 .image-responsive {
   width: 100%;
   height: 5rem;
@@ -42,12 +67,13 @@ nav {
   justify-content: space-around;
   margin: 0;
   background-color: white;
+  border-bottom: 1px solid #dfe6e9;
 }
 
 a {
   position: relative;
   text-decoration: none;
-  font-size: 0.8rem;
+  font-size: large;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   color: #4dacff;
@@ -74,6 +100,23 @@ a:hover:after {
   width: 100%;
 }
 
+/*CSS for table section*/
+td {
+  font-weight: lighter;
+  padding-bottom: 1%;
+}
+
+.nth-table {
+}
+
+/* .nth-table tr:nth-child(even) {
+  padding: 10%;
+  background-color: #4dacff;
+} */
+
+tr.spaceUnder > td {
+  padding-bottom: 3%;
+}
 /*nav {
   position: relative;
   margin: 1%;
